Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-7524

sanity-hsm_404 test failed: >LustreError: 7253:0:(client.c:771:__ptlrpc_request_alloc()) ASSERTION( (unsigned long)imp > 0x1000 ) failed: (null)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • Lustre 2.9.0
    • Lustre 2.8.0
    • Configuration : 4 node dne_singlemds . 1 MDS / 1 OSS / 2 Clients
      Release
      2.6.32_431.29.2.el6.x86_64
      git hash - 2d11035
      Server 2.7.63
      Client 2.7.63
    • 3
    • 9223372036854775807

    Description

      • dmesg
        <4>Lustre: DEBUG MARKER: == sanity-hsm test 404: Inactive MDT does not block requests for active MDTs == 09:51:24 (1449481884)
        <4>Lustre: setting import lustre-MDT0001_UUID INACTIVE by administrator request
        <6>format at client.c:771:__ptlrpc_request_alloc doesn't end in newline
        <0>LustreError: 7253:0:(client.c:771:__ptlrpc_request_alloc()) ASSERTION( (unsigned long)imp > 0x1000 ) failed: (null)
        <0>LustreError: 7253:0:(client.c:771:__ptlrpc_request_alloc()) LBUG
        <4>Pid: 7253, comm: lhsmtool_posix
        <4>
        <4>Call Trace:
        <4> [<ffffffffa02f3875>] libcfs_debug_dumpstack+0x55/0x80 [libcfs]
        <4> [<ffffffffa02f3e77>] lbug_with_loc+0x47/0xb0 [libcfs]
        <4> [<ffffffffa05eec88>] ptlrpc_request_alloc_internal+0x2e8/0x360 [ptlrpc]
        <4> [<ffffffffa05eed23>] ptlrpc_request_alloc+0x13/0x20 [ptlrpc]
        <4> [<ffffffffa05eed53>] ptlrpc_request_alloc_pack+0x23/0x60 [ptlrpc]
        <4> [<ffffffffa022d5c9>] fld_client_rpc+0x1c9/0x510 [fld]
        <4> [<ffffffffa022dbd1>] fld_client_lookup+0x2c1/0x470 [fld]
        <4> [<ffffffffa07a82c1>] lmv_fld_lookup+0xf1/0x440 [lmv]
        <4> [<ffffffffa07a2eba>] lmv_iocontrol+0x11fa/0x3230 [lmv]
        <4> [<ffffffffa02f327b>] ? cfs_set_ptldebug_header+0x2b/0xc0 [libcfs]
        <4> [<ffffffffa02ff083>] ? libcfs_debug_vmsg2+0x5e3/0xbe0 [libcfs]
        <4> [<ffffffff8116fa6c>] ? __kmalloc+0x20c/0x220
        <4> [<ffffffffa088d98b>] ll_fid2path+0x3fb/0x870 [lustre]
        <4> [<ffffffffa08730fc>] ll_dir_ioctl+0x135c/0x7440 [lustre]
        <4> [<ffffffffa08c56ec>] ? ll_authorize_statahead+0x2c/0xc0 [lustre]
        <4> [<ffffffffa088a7e3>] ? ll_file_open+0x5b3/0xca0 [lustre]
        <4> [<ffffffffa05ee020>] ? ptlrpc_req_finished+0x10/0x20 [ptlrpc]
        <4> [<ffffffffa088387d>] ? __ll_inode_revalidate+0x1bd/0xc60 [lustre]
        <4> [<ffffffff811961b3>] ? generic_permission+0x23/0xb0
        <4> [<ffffffffa086db40>] ? ll_dir_open+0x0/0xf0 [lustre]
        <4> [<ffffffffa086db40>] ? ll_dir_open+0x0/0xf0 [lustre]
        <4> [<ffffffff81185f6f>] ? __dentry_open+0x23f/0x360
        <4> [<ffffffff81227e9f>] ? security_inode_permission+0x1f/0x30
        <4> [<ffffffff811861a4>] ? nameidata_to_filp+0x54/0x70
        <4> [<ffffffff8119be8a>] ? do_filp_open+0x6ea/0xd20
        <4> [<ffffffff8104fa68>] ? flush_tlb_others_ipi+0x128/0x130
        <4> [<ffffffff8119e4e2>] vfs_ioctl+0x22/0xa0
        <4> [<ffffffff8119e684>] do_vfs_ioctl+0x84/0x580
        <4> [<ffffffff81196946>] ? final_putname+0x26/0x50
        <4> [<ffffffff8119ec01>] sys_ioctl+0x81/0xa0
        <4> [<ffffffff810e1bfe>] ? __audit_syscall_exit+0x25e/0x290
        <4> [<ffffffff8100b072>] system_call_fastpath+0x16/0x1b
        
      • reproducible.

      Attachments

        1. 404.lctl.tgz
          495 kB
        2. vmcore-dmesg.txt
          26 kB

        Activity

          People

            wc-triage WC Triage
            parinay parinay v kondekar (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: